# ROS_Labs

Mod1/ex00/: README.md
Mod2/ex02/: README.MD
Mod2/ex03/aleksey_bakumov_package/: CMakeLists.txt  package.xml
Mod2/ex03/aleksey_bakumov_package/src/: my_node.cpp
Mod2/ex04/: README.md  colcon_build.txt
Mod2/ex05/: rosnode_info.txt  rosnode_list.txt
Mod2/ex06/: README.md  cmd_vel.txt
Mod2/ex07/: README.md
Mod2/ex08/: README.md  rqt_console.csv
Mod2/ex08/launch/: three_turtles.launch
Mod2/ex09/: README.md
Mod2/ex10/: README.md
Mod2/ex10/ex10/: CMakeLists.txt  package.xml
Mod2/ex10/ex10/src/: text_to_cmd_vel.cpp
Mod3/ex01/: README.md
Mod3/ex01/service_full_name/: CMakeLists.txt  package.xml
Mod3/ex01/service_full_name/src/: add_name_strings_client.cpp  add_name_strings_server.cpp
Mod3/ex01/tutorial_interfaces/: CMakeLists.txt  package.xml
Mod3/ex02/: pose_speed_x1.yaml  pose_speed_x2.yaml
Mod3/ex02/turtle_cmd_vel.mcap/: metadata.yaml  turtle_cmd_vel.mcap_0.db3
Mod3/ex04/move_to_goal/: CMakeLists.txt  package.xml
Mod3/ex04/move_to_goal/src/: move_to_goal.cpp
Mod3/ex05/action_cleaning_robot/: CMakeLists.txt  package.xml
Mod3/ex05/action_cleaning_robot/src/: cleaning_action_client.cpp  cleaning_action_server.cpp
Mod3/ex05/cleaning_action/: CMakeLists.txt  package.xml
Mod4/ex01/: last_transform.txt  transform.txt
Mod4/ex02/: carrot.rviz
Mod4/ex02/learning_tf2_cpp/: CMakeLists.txt  package.xml
Mod4/ex02/learning_tf2_cpp/launch/: turtle_tf2_dynamic_frame_demo.launch.py  turtle_tf2_fixed_frame_demo.launch.py
Mod4/ex02/learning_tf2_cpp/src/: dynamic_frame_tf2_broadcaster.cpp
Mod4/ex02b/3turtles1carrot/: CMakeLists.txt  package.xml
Mod4/ex02b/3turtles1carrot/launch/: 3t1c.launch.py  base_demo.launch.py
Mod4/ex02b/3turtles1carrot/src/: target_switcher.cpp  turtle_controller.cpp
Mod4/ex03/time_travel/: CMakeLists.txt  package.xml
Mod4/ex03/time_travel/src/: turtle_tf2_listener.cpp
Mod5/ex01/: robot.urdf
Mod5/ex02/: robot.urdf
Mod5/ex03/: README.MD  robot_gazebo.launch
Mod5/ex04/: README.MD
Mod6/ex01/: robot_lidar.launch
Mod6/ex02/: robot_depth_camera.launch
ex01/: commands.txt
